--- a/docs/_site.yml
+++ b/docs/_site.yml
@@ -1,4 +1,6 @@
 name: "lab 02"
 navbar:
-  title: "lab 02"
-  href: lab-02.html
+  title: "Chelsey's Lab 02"
+  left:
+  - text: "Content"
+    href: lab-02.html
